# gpuwithwgpu

./: .gitignore  Cargo.toml  README.md
examples/: add.wgsl  par_vec_add.rs  vecmult.wgsl  vector_add.rs  vector_mult.rs
src/: framework.rs  kernel.rs  lib.rs  shader.rs
